Revert "This will hopefully fix the overscroll on IOS (#114)"
This reverts commit 70d12440f669cd83465716e13c6bb8e7a1b3dfa6.

--- a/ui/src/app/modules/teams/components/header/header.component.scss
+++ b/ui/src/app/modules/teams/components/header/header.component.scss
@@ -31,7 +31,7 @@
     left: 0;
     padding-bottom: 0;
     padding-top: 6px;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
   }
